Fixed symbol alignment for map key (map.html, map.css)

--- a/styles/map.css
+++ b/styles/map.css
@@ -110,6 +110,7 @@ div.keytabs button {
    color: black;
    padding: 22px 16px;
    width: 100%;
+   height: 133px;
    border: none;
    outline: none;
    text-align: left;
@@ -134,7 +135,11 @@ div.keytabs button.active {
    border: 1px solid #ccc;
    width: 70%;
    border-left: none;
-   height: 300px;
+   height: 400px;
+}
+
+.symbols{
+  padding: 15px 20px 0px 20px;
 }
 
 .building-symbol{
